fix: hide horizontal overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  @apply font-sans text-darkText bg-white dark:bg-darkText dark:text-white;
+  @apply font-sans text-darkText bg-white dark:bg-darkText dark:text-white overflow-x-hidden;
 }
 
 @keyframes slideRight {
